src/courses/Courses.css
.parent {
    display: flex;
    width: 100%;
}

.contentLeft {
    display: flex;
    flex-direction: column;
    width: 30%;
    height: calc(100vh - 60px);
    padding: 10px;
    align-items: center;
}

.courseList {
    flex: 1;
    overflow-y: auto;
    margin-top: 50px;
    width: 100%;
}

.search-wrapper {
    width: 83%;
    /* align-items: center; */
    padding-right: 23px;
}

.courses-container {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.contentRight {
    flex: 1;
    padding: 10px;
    height: calc(100vh - 60px);
    overflow-y: auto;
}

.dropdown {
    background-color: #f8f9fa;
    color: #495057;
    padding: 8px 12px;
    border: 1px solid #ced4da;
    border-radius: 4px;
    font-size: 12px;
    font-weight: 500;
    cursor: pointer;
    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
    text-align: center;
}

